--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@parcel/transformer-image": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
