--- a/New folder/Namaste-React-main/package.json
+++ b/New folder/Namaste-React-main/package.json
@@ -30,12 +30,14 @@
   "dependencies": {
     "@babel/preset-react": "^7.24.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/react": "^18.3.5",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
+    "react-router-dom": "^6.26.1",
+    "redux": "^5.0.1",
     "sweetalert2": "^11.6.13",
     "yup": "^1.4.0"
   }
